new/updated files

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
-<HTML>
-  <HEAD></HEAD>
-  <BODY><H1>Hello World!</H1></BODY>
+<HTML lang="en">
+  <HEAD><meta charset="utf-8"></HEAD>
+  <BODY><H1>Hello World!</H1>
+    <script src="bundle.js"></script>
+  </BODY>
 </HTML>
