--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE HTML>
-<HTML lang="en">
-  <HEAD><meta charset="utf-8"></HEAD>
-  <BODY><H1>Hello World!</H1>
+<html lang="en">
+  <head><meta charset="utf-8"></head>
+  <body>
+	  <h1>Hello World!</h1>
+	  <br/><br/>
+	  <h1>Users</h1>
+	  <table>
+		  <thead>
+			  <th>&nbsp</th>
+			  <th>I.D.</th>
+			  <th>First Name</th>
+			  <th>Last Name</th>
+			  <th>Email</th>
+		  </thead>
+		  <tbody id="users"></tbody>
+	  </table>
     <script src="bundle.js"></script>
-  </BODY>
-</HTML>
+</body>
+</html>
