Update: Dynamic HTML, JS injection, Bundle Splitting, (possibly cache busting)

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
 		  </thead>
 		  <tbody id="users"></tbody>
 	  </table>
-    <script src="bundle.js"></script>
+    <!--script src="bundle.js"></script-->
 </body>
 </html>
